CHANGELOG FOR LEMONPOS VERSION 0.9.3 
-----------------------------------------------------
- BUGFIX       : Taxes for SpecialOrders/CustomProducts are now calculated and printed on tickets.
- BUGFIX       : SpecialOrders (extra ticket) notes printing fixed.
- BUGFIX       : When selling Custom Products and adding more than one, the client is the same
                 for all custom products, its not allowed to change the client when adding another custom product.
- BUGFIX       : Adding fix_roles.sql script to fix the roles on database. Run this on 0.9.2 or older databases.
- BUGFIX       : Crash when using the Products Table View by default.
- BUGFIX       : Squeeze Freezes when adding a new user, under certain conditions. May influence kernel version.
                 This bug is related to /dev/random. Now hash function uses /dev/urandom,
                 and the mouse need to be moved during the 'add user' action.
- BUGFIX       : Unable to delete offers. This bug was present on older versions but with the Products table. This is
                 Related to QSqlTableModel class. To fix it, an own delete method was coded.
- BUGFIX       : Offers Editor's validate method (date,amount,product) fixed.
- BUGFIX       : Undefined values for balanceId and totalTax in the transaction table, only for purchases.
- BUGFIX       : AddTax feature is adding the tax to the total amount.
- IMPROVEMENT  : Increased refresh time for the model views (all tables on Squeeze), they refresh every 2 minutes instead of 5 seconds.
- IMPROVEMENT  : SpecialOrders delivery date now is printed in the format: 'Mon 21 May, 4:30 PM'.
- IMPROVEMENT  : SpecalOrders are now allowed to be marked as delivered on the same day.
- IMPROVEMENT  : Now specialOrders notes are up to 800 characters long.
- IMPROVEMENT  : Some important fields (group elements, items in transactions...) are expanded to 1000 chars, and other to 255 from lower values.
- UPDATE       : Some translations where updated (de,es).
