@@ -1,5 +1,7 @@
 CHANGELOG FOR LEMONPOS VERSION 0.9.3 
 -----------------------------------------------------
+- BUGFIX       : AddTax feature is adding the tax to the total amount.             ***IMPORTANT FIX***
+- BUGFIX       : Product Editor now calculates the right compound tax for groups.  ***IMPORTANT FIX***
 - BUGFIX       : Taxes for SpecialOrders/CustomProducts are now calculated and printed on tickets.
 - BUGFIX       : SpecialOrders (extra ticket) notes printing fixed.
 - BUGFIX       : When selling Custom Products and adding more than one, the client is the same
@@ -13,7 +15,6 @@ CHANGELOG FOR LEMONPOS VERSION 0.9.3
                  Related to QSqlTableModel class. To fix it, an own delete method was coded.
 - BUGFIX       : Offers Editor's validate method (date,amount,product) fixed.
 - BUGFIX       : Undefined values for balanceId and totalTax in the transaction table, only for purchases.
-- BUGFIX       : AddTax feature is adding the tax to the total amount.
 - IMPROVEMENT  : Increased refresh time for the model views (all tables on Squeeze), they refresh every 2 minutes instead of 5 seconds.
 - IMPROVEMENT  : SpecialOrders delivery date now is printed in the format: 'Mon 21 May, 4:30 PM'.
 - IMPROVEMENT  : SpecalOrders are now allowed to be marked as delivered on the same day.
